--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,9 +13,10 @@ dependencies = [
     "asyncpg>=0.29.0",
     "sqlalchemy[asyncio]>=2.0.0",
     "alembic>=1.13.0",
-    "redis>=5.0.0",
+    "redis[hiredis]>=5.0",
     "apscheduler>=3.10.0",
-    "google-generativeai>=0.3.0",
+    "google-genai>=0.5.0",
+    "pydantic>=2.10",
     "pydantic-settings>=2.1.0",
     "structlog>=24.1.0",
     "python-dotenv>=1.0.0",
