--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,14 +9,14 @@ description = "Хроніки Помийки - A Ukrainian Telegram Card Game Bo
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
-    "aiogram>=3.0,<4.0",
+    "aiogram>=3.17,<4.0",
     "asyncpg>=0.29.0",
     "sqlalchemy[asyncio]>=2.0.0",
     "alembic>=1.13.0",
-    "redis[hiredis]>=5.0",
+    "redis>=5.2.0,<6.0",
     "apscheduler>=3.10.0",
-    "google-genai>=1.0.0",
-    "pydantic>=2.10",
+    "google-genai==1.56.0",
+    "pydantic>=2.10,<3.0",
     "pydantic-settings>=2.1.0",
     "structlog>=24.1.0",
     "python-dotenv>=1.0.0",
