Enhance chat export functionality and admin commands
- Updated `.gitignore` to ignore JSON and TXT files in the `data/chat_exports/` directory while keeping the directory itself.
- Modified `docker-compose.yml` to mount the `data/chat_exports` directory into the container for easy access to chat export files.
- Implemented `ChatImportService` to handle importing chat history from Telegram JSON exports, including user and message log creation.
- Added `/import_chat` command in `handlers/admin.py` for admins to import chat history directly from the bot.
- Introduced `/createcommoncard` command to allow admins to create reusable card templates using AI generation from detailed prompts.
- Enhanced `CardArchitectService` to incorporate user names into card names for personalized card generation.
- Updated `SessionManager` to manage blueprint data for autocard callbacks, allowing for temporary storage and retrieval of card blueprints.
- Improved error handling and logging throughout the new features for better debugging and user feedback.

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,7 @@ htmlcov/
 .mypy_cache/
 .dmypy.json
 dmypy.json
+
+# Chat exports (keep directory but ignore JSON files)
+data/chat_exports/*.json
+data/chat_exports/*.txt
