--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "pydantic-settings>=2.1.0",
     "structlog>=24.1.0",
     "python-dotenv>=1.0.0",
+    "Pillow>=10.0.0",
 ]
 
 [project.optional-dependencies]
