--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,37 +9,37 @@ description = "Хроніки Помийки - A Ukrainian Telegram Card Game Bo
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
-    "aiogram>=3.17,<4.0",
-    "asyncpg>=0.29.0",
-    "sqlalchemy[asyncio]>=2.0.0",
-    "alembic>=1.13.0",
-    "redis>=5.2.0,<6.0",
-    "apscheduler>=3.10.0",
+    "aiogram==3.24.0",
+    "asyncpg==0.31.0",
+    "sqlalchemy[asyncio]==2.0.45",
+    "alembic==1.17.2",
+    "redis==7.1.0",
+    "apscheduler==3.11.2",
     "google-genai==1.56.0",
-    "pydantic>=2.10,<3.0",
-    "pydantic-settings>=2.1.0",
-    "structlog>=24.1.0",
-    "python-dotenv>=1.0.0",
-    "Pillow>=10.0.0",
-    "numpy>=1.24.0",
+    "pydantic==2.12.5",
+    "pydantic-settings==2.12.0",
+    "structlog==25.5.0",
+    "python-dotenv==1.2.1",
+    "Pillow==12.1.0",
+    "numpy==2.4.0",
 ]
 
 [project.optional-dependencies]
 dev = [
-    "pytest>=8.0.0",
-    "pytest-asyncio>=0.23.0",
-    "pytest-mock>=3.14.0",
-    "pytest-cov>=5.0.0",
-    "pytest-xdist>=3.6.0",
-    "pytest-watch>=4.2.0",
-    "faker>=33.0.0",
-    "pre-commit>=3.8.0",
-    "httpx>=0.27.0",
-    "fakeredis>=2.25.0",
-    "aiosqlite>=0.20.0",
-    "black>=24.0.0",
-    "ruff>=0.1.0",
-    "mypy>=1.8.0",
+    "pytest==9.0.2",
+    "pytest-asyncio==1.3.0",
+    "pytest-mock==3.15.1",
+    "pytest-cov==7.0.0",
+    "pytest-xdist==3.8.0",
+    "pytest-watch==4.2.0",
+    "faker==40.1.0",
+    "pre-commit==4.5.1",
+    "httpx==0.28.1",
+    "fakeredis==2.33.0",
+    "aiosqlite==0.22.1",
+    "black==25.12.0",
+    "ruff==0.14.10",
+    "mypy==1.19.1",
 ]
 
 [tool.pytest.ini_options]
