chore: Add new ignore rule for `data/chat_exports/помийка`

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,4 @@ dmypy.json
 # Chat exports (keep directory but ignore JSON files)
 data/chat_exports/*.json
 data/chat_exports/*.txt
+data/chat_exports/помийка
